# cpp_baremetal_projects

./: .clang-format  .editorconfig  .gitignore  01__Drivers_2test_2main_8cpp.html  01__Drivers_2test_2main_8cpp.js  01__Drivers_2test_2main_8cpp__incl.map  01__Drivers_2test_2main_8cpp__incl.md5  01__Drivers_2test_2main_8cpp_source.html  02__HAL_2test_2main_8cpp.html  02__HAL_2test_2main_8cpp_source.html  05__Libraries_2test_2main_8cpp.html  05__Libraries_2test_2main_8cpp.js  05__Libraries_2test_2main_8cpp__incl.map  05__Libraries_2test_2main_8cpp__incl.md5  05__Libraries_2test_2main_8cpp_source.html  CMakeLists.txt  LICENSE  annotated.html  annotated_dup.js  architecture_8md.html  classes.html  classwork_1_1GICC-members.html  classwork_1_1GICC.html  classwork_1_1GICC.js  classwork_1_1GICD-members.html  classwork_1_1GICD.html  classwork_1_1GICD.js  classwork_1_1MMIO_1_1MmapBase-members.html  classwork_1_1MMIO_1_1MmapBase.html  classwork_1_1MMIO_1_1MmapBase.js  classwork_1_1MMIO_1_1PhyBase-members.html  classwork_1_1MMIO_1_1PhyBase.html  classwork_1_1MMIO_1_1PhyBase.js  classwork_1_1MMIO_1_1Register-members.html  classwork_1_1MMIO_1_1Register.html  classwork_1_1MMIO_1_1Register.js  classwork_1_1MMIO_1_1RegisterArray-members.html  classwork_1_1MMIO_1_1RegisterArray.html  classwork_1_1MMIO_1_1RegisterArray.js  classwork_1_1UART-members.html  (+199 more)
00_Startup/: CMakeLists.txt
00_Startup/src/: startup.c  startup_a32.S
00_startup/: CMakeLists.txt
00_startup/app/: main.c
00_startup/src/: crt0_x86_64.S  ldscript_a32.ld  ldscript_a64.ld  startup.c  startup_a32.S
01_HAL/: CMakeLists.txt
01_gic/: CMakeLists.txt
01_gic/app/: ldscript_a64.ld  main.cpp  startup.S  startup_a64.S
01_gic/inc/: gicc.hpp  mmio.hpp  uart.hpp
01_gic/src/: gicc.cpp  ldscript.ld  ldscript_a64.ld  main.cpp  mmio.cpp  startup.S  uart.cpp
02_string/: CMakeLists.txt
02_string/app/: main.cpp
02_string/inc/: nkstring.h
02_string/src/: nkstring.cpp
04_Libraries/: CMakeLists.txt
doc/: .gitignore  Doxyfile  architecture.md  elf-format.md  main.md
doc/markdown/: architecture.md
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  (+40 more)
src/: CMakeLists.txt
src/Benchmarks/: memcpy_a64.cpp  memcpy_a64.s
src/CyclicTest/: CMakeLists.txt  cyclictest.hpp  cyclictest_itimer.cpp  cyclictest_itimer.hpp  cyclictest_main.cpp  cyclictest_main.h  cyclictest_nanosleep.cpp  cyclictest_nanosleep.hpp  main.c
src/RunKVM/: runkvm.cpp
src/SelfChecks/: CMakeLists.txt  main.c  selfchecks.hpp  selfchecks_main.cpp  selfchecks_main.h  selfchecks_mem.cpp  selfchecks_mem.hpp
tools/: build.sh  build_all.sh
tools/cmake/: BuildBareMetal.cmake  CWarning.cmake  CompilerWarning.cmake  FetchLibraries.cmake  _clang-common.cmake  _gcc-common.cmake  aarch64-linux-clang-13.cmake  aarch64-linux-clang.cmake  aarch64-linux-gcc-10.cmake  aarch64-linux-gcc.cmake  aarch64-none-clang-13.cmake  aarch64-none-clang.cmake  aarch64-none-gcc-10.cmake  aarch64-none-gcc.cmake  armhf-linux-clang.cmake  armhf-linux-gcc.cmake  armhf-none-clang.cmake  armhf-none-gcc.cmake  clang-13.cmake
tools/scripts/: aarch64.sh  aarch64_bare.sh  armhf.sh  armhf_bare.sh  native.sh  qemu_aarch64.sh
