cmake_minimum_required(VERSION 3.16)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/tools/cmake)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
project(CppBareMetal CXX)

message("CMAKE_SYSTEM_NAME:      " ${CMAKE_SYSTEM})
message("CMAKE_SYSTEM_PROCESSOR: " ${CMAKE_SYSTEM_PROCESSOR})
message("CMAKE_CROSSCOMPILING:   " ${CMAKE_CROSSCOMPILING})

include(CTest)
include(BuildBareMetal)
include(CompilerWarning)
include(FetchLibraries)
add_subdirectory(00_Startup)
add_subdirectory(01_HAL)
add_subdirectory(02_OS)
add_subdirectory(03_FAL)
add_subdirectory(04_Libraries)
add_subdirectory(05_MAL)
