cmake_minimum_required(VERSION 3.13)
project(BareMetal00_Startup C)
enable_language(ASM)

set(LDSCRIPT)
if (${CMAKE_SYSTEM_PROCESSOR} STREQUAL "AArch64")
  if (${CMAKE_SYSTEM_NAME} STREQUAL "Generic")
    set(STARTUP_ASM src/startup_a64.S)
    set(LDSCRIPT    src/ldscript_a64.ld)
  elseif (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
    set(STARTUP_ASM src/ctr0_a64.S)
  endif()
elseif (${CMAKE_SYSTEM_PROCESSOR} STREQUAL "Arm")
  if (${CMAKE_SYSTEM_NAME} STREQUAL "Generic")
    set(STARTUP_ASM src/startup_a32.S)
    set(LDSCRIPT    src/ldscript_a32.ld)
  elseif (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
    set(STARTUP_ASM src/crt0_a32.S)
  endif()
endif()

add_library(lib00_Startup OBJECT src/startup.c
  $<$<PLATFORM_ID:Generic>: $STARTUP_ASM>)
if(COMMAND target_compile_option_warning)
  target_compile_option_warning(lib00_Startup)
endif()

add_executable(00_Startup app/main.c)
if(COMMAND target_compile_option_warning)
  target_compile_option_warning(00_Startup)
endif()
target_link_libraries(00_Startup
  $<$<PLATFORM_ID:Generic>:lib00_Startup>)
if(COMMAND target_link_option_baremetal)
  target_link_option_baremetal(00_Startup ${BareMetal00_Startup_SOURCE_DIR}/${LDSCRIPT})
endif()
